[fix] fix bugs in converting Bnet to factorgraph; update logging of and control of dai factor graph